--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -119,18 +119,25 @@ section {
 
 .slidercontent {
   margin: auto;
+  max-width: 800px;
+}
+
+.slidercontent2 {
+  margin: auto;
   text-align: center;
   max-width: 800px;
 }
 
+
 p.slidercontent-title {
   margin: auto;
-  font-size: 50px;
+  font-size: 40px;
   letter-spacing: 2px;
   line-height: 1.2;
   padding: 10px 0;
   font-weight: 700;
-  font-family: 'Poppins', Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: Arial,Helvetica,sans-serif;
+  font: normal normal bold 54px/1.4em damion,cursive;
 }
 
 .slidercontent-black {
